--- a/Homework 10.5 - Telegram_bot_GUI/packages.config
+++ b/Homework 10.5 - Telegram_bot_GUI/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Cells" version="22.2.0" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.42" targetFramework="net48" />
   <package id="MaterialDesignColors" version="2.0.4" targetFramework="net48" />
   <package id="MaterialDesignThemes" version="4.3.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Telegram.Bot" version="16.0.2" targetFramework="net48" />
 </packages>
